Add quoting route

--- a/libs/masterpage/src/lib/masterpage/masterpage.component.html
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.html
@@ -1,6 +1,8 @@
-
 <a routerLink="/">Home</a>
+<a routerLink="/quoting">Quoting</a>
+<!--
 <a routerLink="/login">Login</a>
 <a routerLink="/sandbox">Sandbox</a>
-<hr/>
+-->
+<hr />
 <ng-content></ng-content>
