--- a/apps/los/src/styles.scss
+++ b/apps/los/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'primeng/resources/primeng.min.css'; // 7k
+@import 'primeng/resources/themes/nova/theme.css'; // 134k
