Get deployment working

--- a/apps/quoting/src/app/app.component.html
+++ b/apps/quoting/src/app/app.component.html
@@ -1,2 +1,4 @@
-<a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
-<router-outlet></router-outlet>
+<lib-masterpage>
+  <a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
+  <router-outlet></router-outlet>
+</lib-masterpage>
