--- a/libs/masterpage/src/lib/masterpage/masterpage.component.html
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.html
@@ -1,10 +1,6 @@
-<a routerLink="/">Home</a>
-<a routerLink="/dashboard">Dashboard</a>
+<a routerLink="/">Dashboard</a>
 <a routerLink="/sandbox">Sandbox</a>
 <a routerLink="/quoting">Quoting</a>
-<!--
-<a routerLink="/login">Login</a>
 
--->
 <hr />
 <ng-content></ng-content>
