Styling and masterpage enhancements

--- a/apps/dashboard/src/app/routes/dashboard/dashboard.component.html
+++ b/apps/dashboard/src/app/routes/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <lib-masterpage>
-  <h1>Dashboard</h1>
-  <!--
-  <router-outlet></router-outlet>
-  -->
+  <div class="container">
+    <h1>Dashboard</h1>
+  </div>
 </lib-masterpage>
