--- a/apps/sandbox/src/app/sandbox.component.html
+++ b/apps/sandbox/src/app/sandbox.component.html
@@ -1,4 +1,6 @@
 <lib-masterpage>
-  <h1>Sandbox</h1>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <h1>Sandbox</h1>
+    <router-outlet></router-outlet>
+  </div>
 </lib-masterpage>
