--- a/libs/masterpage/src/lib/masterpage/masterpage.component.html
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.html
@@ -1,6 +1,4 @@
-<a routerLink="/">Dashboard</a>
-<a routerLink="/sandbox">Sandbox</a>
-<a routerLink="/quoting">Quoting</a>
-
-<hr />
+<lib-header>
+  <lib-nav></lib-nav>
+</lib-header>
 <ng-content></ng-content>
