--- a/apps/quoting/src/app/quoting.component.html
+++ b/apps/quoting/src/app/quoting.component.html
@@ -1,4 +1,6 @@
 <lib-masterpage>
-  <a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
+    <router-outlet></router-outlet>
+  </div>
 </lib-masterpage>
