Add more GraphQL CRUD coverage

--- a/apps/users/src/app/users.component.html
+++ b/apps/users/src/app/users.component.html
@@ -1,3 +1,8 @@
 <lib-masterpage>
-  <div class="container">Test</div>
+  <div class="container">
+    <h1>Users</h1>
+    <button p-button (click)="userAdd()">Add User</button> |
+    <button p-button (click)="userUpdate()">Update User</button> |
+    <button p-button (click)="refresh()">Refresh Users</button>
+  </div>
 </lib-masterpage>
