--- a/apps/sandbox/src/app/sandbox.component.html
+++ b/apps/sandbox/src/app/sandbox.component.html
@@ -1,6 +1,18 @@
-<lib-masterpage>
-  <div class="container">
-    <h1>Sandbox</h1>
-    <router-outlet></router-outlet>
+<div class="container py-4">
+  <h1>CLASS Web</h1>
+  <hr />
+
+  <div style="margin: auto; max-width: 480px">
+    <p-card header=" A Piece Of Info">
+      <form (submit)="submit()" [formGroup]="form">
+        <div class="mb-3">
+          <input pInputText formControlName="tbd" class="w-100" />
+        </div>
+
+        <p class="mb-0">
+          <button pButton type="submit">Submit</button>
+        </p>
+      </form>
+    </p-card>
   </div>
-</lib-masterpage>
+</div>
