--- a/libs/state-management/src/components/api-state/api-state.component.scss
+++ b/libs/state-management/src/components/api-state/api-state.component.scss
@@ -1,6 +1,6 @@
-.nts-state {
+.lib-state {
   position: relative;
-  .nts-state-spacer {
+  .lib-state-spacer {
     position: absolute;
     top: 0;
     z-index: 25;
