Add sandbox to nav

--- a/apps/sandbox/src/app/sandbox.component.html
+++ b/apps/sandbox/src/app/sandbox.component.html
@@ -1,18 +1,17 @@
-<div class="container py-4">
-  <h1>CLASS Web</h1>
-  <hr />
+<lib-masterpage>
+  <div class="container py-4">
+    <div style="margin: auto; max-width: 480px">
+      <p-card header=" A Piece Of Info">
+        <form (submit)="submit()" [formGroup]="form">
+          <div class="mb-3">
+            <input pInputText formControlName="tbd" class="w-100" />
+          </div>
 
-  <div style="margin: auto; max-width: 480px">
-    <p-card header=" A Piece Of Info">
-      <form (submit)="submit()" [formGroup]="form">
-        <div class="mb-3">
-          <input pInputText formControlName="tbd" class="w-100" />
-        </div>
-
-        <p class="mb-0">
-          <button pButton type="submit">Submit</button>
-        </p>
-      </form>
-    </p-card>
+          <p class="mb-0">
+            <button pButton type="submit">Submit</button>
+          </p>
+        </form>
+      </p-card>
+    </div>
   </div>
-</div>
+</lib-masterpage>
