Forms libs refactor. Fix type safety, update to latest prime version.

--- a/libs/forms/src/lib/components/autocomplete/autocomplete.component.html
+++ b/libs/forms/src/lib/components/autocomplete/autocomplete.component.html
@@ -1,4 +1,4 @@
-<div class="nts-autocomplete">
+<div class="autocomplete">
   <p-autoComplete
     class="auto-complete"
     [field]="label"
@@ -19,7 +19,7 @@
       {{ term && label && term[label] ? term[label] : term }}
     </ng-template>
   </p-autoComplete>
-  <a class="nts-autocomplete-icon">
+  <a class="autocomplete-icon">
     <i class="fa fa-search" aria-hidden="true"></i>
   </a>
 </div>
