--- a/libs/forms/src/lib/components/autocomplete/autocomplete.component.scss
+++ b/libs/forms/src/lib/components/autocomplete/autocomplete.component.scss
@@ -1,8 +1,8 @@
-nts-autocomplete {
+autocomplete {
   display: block;
   width: 100%;
 }
-.nts-autocomplete {
+.autocomplete {
   p-autocomplete {
     display: block;
     width: 100%;
@@ -14,7 +14,7 @@ nts-autocomplete {
   input {
     border: 0;
   }
-  .nts-autocomplete-icon {
+  .autocomplete-icon {
     padding: 0 0.5rem;
     align-self: center;
   }
