--- a/libs/forms/src/lib/components/filter-field/filter-field.component.scss
+++ b/libs/forms/src/lib/components/filter-field/filter-field.component.scss
@@ -1,5 +1,5 @@
 :host {
-  .nts-filter-small {
+  .filter-small {
     height: 21px;
     .ui-inputgroup {
       height: 24px;
@@ -14,7 +14,7 @@
       top: 4%;
     }
   }
-  .nts-filter-field {
+  .filter-field {
     position: relative;
     display: inline-block;
   }
