--- a/libs/forms/src/lib/components/form-fields/phonenumber/phonenumber.component.html
+++ b/libs/forms/src/lib/components/form-fields/phonenumber/phonenumber.component.html
@@ -1,5 +1,5 @@
 <div class="input-phonenumber">
-  <nts-form-field-input
+  <lib-input
     [label]="label"
     [placeholder]="placeholder"
     [prefix]="prefix"
@@ -13,14 +13,14 @@
     <p-inputMask
       #field
       [id]="id || formFieldID"
-      [name]="name || (label || placeholder | ntsSlug)"
+      [name]="name || (label || placeholder | slug)"
       [placeholder]="placeholder ? placeholder : '(___) ___-____'"
-      [ngClass]="styleClass ?? ''"
+      [ngClass]="styleClass"
       mask="(999) 999-9999"
       [unmask]="unmask"
       [formControl]="formControl"
       (onFocus)="focused = true; cursorPositionSet(field, 1)"
       (onBlur)="focused = false"
     ></p-inputMask>
-  </nts-form-field-input>
+  </lib-input>
 </div>
