--- a/libs/forms/src/lib/components/form-fields/radio/radio.component.scss
+++ b/libs/forms/src/lib/components/form-fields/radio/radio.component.scss
@@ -1,8 +1,8 @@
-.nts-radio {
+.radio {
   .p-inputgroup > .p-float-label {
     position: initial;
   }
-  .nts-radio-options {
+  .radio-options {
     width: 100%;
     margin-top: 0.5rem;
   }
@@ -11,7 +11,7 @@
     position: relative;
     cursor: pointer;
   }
-  .nts-radio-label {
+  .radio-label {
     margin-bottom: 0 !important;
   }
 }
