--- a/libs/masterpage/src/lib/masterpage/header/header.component.scss
+++ b/libs/masterpage/src/lib/masterpage/header/header.component.scss
@@ -10,7 +10,7 @@ header {
   padding-bottom: 20px;
   .logo {
     text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.3);
-    color: var(--nts-interact);
+    color: var(--interact);
   }
   .brand {
     display: inline-block;
