--- a/libs/forms/src/lib/components/form-fields/email/email.component.html
+++ b/libs/forms/src/lib/components/form-fields/email/email.component.html
@@ -1,5 +1,5 @@
 <div class="input-email">
-  <nts-form-field-input
+  <lib-input
     [label]="label"
     [placeholder]="placeholder"
     [prefix]="prefix"
@@ -15,8 +15,8 @@
       class="p-inputtext p-component p-element"
       type="email"
       [id]="id || formFieldID"
-      [name]="name || (label || placeholder | ntsSlug)"
-      [ngClass]="styleClass ?? ''"
+      [name]="name || (label || placeholder | slug)"
+      [ngClass]="styleClass"
       [placeholder]="placeholder ? placeholder : 'email@domain.com'"
       (focus)="focus($event)"
       (blur)="blur($event)"
@@ -24,5 +24,5 @@
       (click)="onClick.emit($event)"
       [formControl]="formControl"
     />
-  </nts-form-field-input>
+  </lib-input>
 </div>
