--- a/libs/forms/src/lib/components/form-generator/content/content.component.html
+++ b/libs/forms/src/lib/components/form-generator/content/content.component.html
@@ -1,15 +1,15 @@
-<div class="nts-generator-content">
-  <nts-form-field-html
+<div class="lib-generator-content">
+  <lib-html
     *ngIf="is.contentType.html(content)"
     [formGroup]="formGroup"
     [content]="content"
     [options]="options"
-  ></nts-form-field-html>
-  <nts-form-field-form-field
+  ></lib-html>
+  <lib-form-field
     *ngIf="is.contentType.formField(content)"
     [formGroup]="formGroup"
     [formField]="content"
     [options]="options"
     [datafields]="datafields"
-  ></nts-form-field-form-field>
+  ></lib-form-field>
 </div>
