--- a/libs/forms/src/lib/components/form-generator/row/row.component.html
+++ b/libs/forms/src/lib/components/form-generator/row/row.component.html
@@ -14,12 +14,12 @@
         [ngClass]="column?.cssClasses ?? ''"
         [ngStyle]="column?.inlineStyles ?? null"
       >
-        <nts-form-field-column
+        <lib-column
           [formGroup]="formGroup"
           [column]="column"
           [datafields]="datafields"
           [options]="options"
-        ></nts-form-field-column>
+        ></lib-column>
       </div> </ng-container
   ></ng-container>
   <ng-template #noColumns> No columns supplied </ng-template>
