Improvements to lazy loading

--- a/libs/state-management/src/components/error/error.component.html
+++ b/libs/state-management/src/components/error/error.component.html
@@ -28,9 +28,7 @@
       <!-- Show accordion not error on load-->
 
       <p-accordion>
-        <p-accordionTab header="See error details">
-          <pre class="mb-0">{{ error | json }}</pre>
-        </p-accordionTab>
+        <p-accordionTab header="See error details"> </p-accordionTab>
       </p-accordion>
     </div>
   </div>
