--- a/apps/quoting/src/app/quoting.component.html
+++ b/apps/quoting/src/app/quoting.component.html
@@ -1,4 +1,4 @@
-<lib-masterpage>
+<lib-masterpage [showNav]="false">
   <div class="container">
     <a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
     <router-outlet></router-outlet>
