Initial quoting experience

--- a/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
+++ b/libs/forms/src/lib/components/form-fields/select-button/select-button.component.html
@@ -1,6 +1,9 @@
 <div
   class="input-selectbutton"
-  [ngClass]="{ 'input-selectbutton-full': fullWidth }"
+  [ngClass]="{
+    'input-selectbutton-full': fullWidth,
+    'input-selectbutton-vertical': vertical
+  }"
 >
   <lib-input
     [label]="label"
