--- a/libs/forms/src/lib/components/form-fields/select-button/select-button.component.scss
+++ b/libs/forms/src/lib/components/form-fields/select-button/select-button.component.scss
@@ -8,3 +8,9 @@
     }
   }
 }
+.input-selectbutton-vertical .p-selectbutton {
+  flex-direction: column !important;
+  .p-button {
+    margin-bottom: 1rem;
+  }
+}
