--- a/apps/quoting/src/app/quoting.component.html
+++ b/apps/quoting/src/app/quoting.component.html
@@ -1,6 +1,5 @@
-<lib-masterpage [showNav]="false">
+<lib-masterpage>
   <div class="container">
-    <a routerLink="/quoting">Home</a> | <a routerLink="step1">Step 1</a>
     <router-outlet></router-outlet>
   </div>
 </lib-masterpage>
