--- a/apps/quoting/src/app/routes/home/home.component.html
+++ b/apps/quoting/src/app/routes/home/home.component.html
@@ -1,23 +1,9 @@
-<p-card>
-  <div class="quote-container">
-    <h1>How much money do you need?</h1>
-    <lib-form-generator
-      [formModel]="formModel"
-      [formGroup]="svc.borrowerForm"
-      [options]="svc.formOptions"
-      [disableSubmit]="false"
-      (completed)="onFormCompleted()"
-    >
-      <!--
-      <div footerContentLeft>
-        <button
-          pButton
-          class="p-ripple p-element p-button p-component p-button-outlined btn-back"
-        >
-          Back
-        </button>
-      </div>
--->
-    </lib-form-generator>
-  </div>
-</p-card>
+<div class="bg"></div>
+<div class="container">
+  <p-card>
+    <div>
+      <h1>Get a Quote!</h1>
+      <app-quote-calculator></app-quote-calculator>
+    </div>
+  </p-card>
+</div>
