--- a/libs/masterpage/src/lib/masterpage/header/header.component.scss
+++ b/libs/masterpage/src/lib/masterpage/header/header.component.scss
@@ -5,7 +5,7 @@
 header {
   background: #fff;
   // border-bottom: 1px solid #e2e5e8;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   padding-top: 20px;
   padding-bottom: 20px;
   .logo {
