Refactor quote form to use module

--- a/apps/quoting/src/app/components/quote-calculator/quote-calculator.component.html
+++ b/apps/quoting/src/app/components/quote-calculator/quote-calculator.component.html
@@ -42,7 +42,7 @@
             <div>84 Months</div>
           </div>
         </div>
-        <!---->
+        <!--
         <div class="quote-selector">
           <p class="label">Your Approximate Monthly Income</p>
           <h2>
@@ -69,6 +69,7 @@
             <div>$15,000+</div>
           </div>
         </div>
+        -->
         <!---->
         <div class="quote-selector">
           <p class="label">Your Approximate Credit Score</p>
@@ -112,7 +113,7 @@
               <tbody>
                 <tr>
                   <td>Collateral</td>
-                  <td>No</td>
+                  <td>{{ product.hasCollateral }}</td>
                 </tr>
                 <tr>
                   <td>Rate</td>
