--- a/apps/quoting/src/app/components/quote-calculator/quote-calculator.component.scss
+++ b/apps/quoting/src/app/components/quote-calculator/quote-calculator.component.scss
@@ -32,39 +32,11 @@
       font-size: 2.25rem;
     }
   }
-  .loan-products {
-    margin-bottom: 2rem;
-    .loan-product {
-      border: 1px solid #c1e3f5;
-      padding: 1rem;
-      border-radius: 5px;
-      background: #faffff;
-      margin-bottom: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .loan-product-amount {
-        font-size: 1.5rem;
-        font-weight: 700;
-        letter-spacing: -1px;
-        margin-bottom: 0;
-      }
-      .loan-product-label {
-        text-align: center;
-        font-style: italic;
-        margin: 0;
-      }
-      .terms table {
-        margin: 0;
-        font-size: 0.75rem;
-        td {
-          padding: 0.25rem 1rem;
-          background: none;
-        }
-        tr:last-child td {
-          border: 0;
-        }
-      }
+  h3 {
+    margin-bottom: 15px;
+    font-size: 24px;
+    @media (min-width: 768px) {
+      // font-size: 28px;
     }
   }
 }
