Loan calculations update

--- a/apps/quoting/src/app/components/progress/progress.component.html
+++ b/apps/quoting/src/app/components/progress/progress.component.html
@@ -1,1 +1,7 @@
-<p>progress works!</p>
+<div class="progress">
+  <p-timeline [value]="pages" layout="horizontal">
+    <ng-template pTemplate="content" let-event>
+      {{ event }}
+    </ng-template>
+  </p-timeline>
+</div>
