--- a/apps/quoting/src/app/components/masterpage/masterpage.component.html
+++ b/apps/quoting/src/app/components/masterpage/masterpage.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-3">
+<div class="container">
+  <app-progress></app-progress>
   <p-card>
     <router-outlet></router-outlet>
   </p-card>
