--- a/libs/masterpage/src/lib/masterpage/masterpage.component.css
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.css
@@ -1,3 +1,9 @@
-a{
-    margin-right:1rem;
+a {
+  margin-right: 1rem;
+}
+footer {
+  margin-top: 2rem;
+  background: #f5f6f6;
+  padding: 2rem 0rem;
+  font-size: 11px;
 }
