Refactor quote calculator to be standalone

--- a/apps/quoting/src/app/routes/home/home.component.html
+++ b/apps/quoting/src/app/routes/home/home.component.html
@@ -4,6 +4,7 @@
     <div>
       <h1>Explore Loan Choices with Our Customizable Calculator</h1>
       <app-quote-calculator
+        (quoteChanged)="quoteChanged($event)"
         (productSelected)="productSelected($event)"
       ></app-quote-calculator>
     </div>
